<resources>
    <string name="app_name">GteamPBL</string>
    <string name="rd_hour">1時間</string>
    <string name="rd_half">30分</string>
    <string name="sound">サウンド</string>
    <string name="snooze">スヌーズ</string>
    <string name="weather_alarm">雨のアラーム</string>
    <string name="alarm_title">アラーム名</string>
    <string name="decision">決定</string>
    <string name="cancel">キャンセル</string>
</resources>